<resources>
    <string name="app_name">EasyContact</string>

    <string name="log_in">Zaloguj</string>
    <string name="sign_up">Zarejestruj</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Hasło</string>
    <string name="confirm_password">Potwierdź hasło</string>

    <string name="new_password">New password</string>

    <string name="orders">zamówienia</string>
    <string name="add_order">Dodaj zamówienie</string>
    <string name="user">użytkownik</string>
    <string name="name">Nazwa</string>
    <string name="address">Adres</string>
    <string name="about_user">O użytkowniku</string>
    <string name="phone_number">Numer telefonu</string>

    <!--  orders-->
    <string name="name_order">Nazwa: </string>
    <string name="quantity">Ilość: </string>
    <string name="warehouse_to">Magazyn docelowy: </string>
    <string name="warehouse_from">Magazyn startowy: </string>
    <string name="execution_date">Data wykonania: </string>
    <string name="executor">Wykonawca: </string>
    <string name="principal">Zleceniodawca: </string>
    <string name="no_orders">Brak dostępnych zamówień do wyświetlenia</string>
    <string name="ware_name">Nazwa towaru</string>
    <string name="cancel">Anuluj</string>
    <string name="assign_to_me">Przyjmij</string>

    <string name="text_yes">tak</string>
    <string name="text_cancel">nie</string>
    <string name="are_you_sure">Czy na pewno chcesz zamknąć aplikacje?</string>
</resources>
