<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    tools:context="com.easyContact.mobileapp.ui.orders.addOrder.AddOrderActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/spacing_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputWareLayout"
            style="@style/MainEditTextLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/ware_name"
            android:paddingBottom="@dimen/spacing_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputWare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/inputQuantityLayout"
            style="@style/MainEditTextLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/quantity"
            android:paddingBottom="@dimen/spacing_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputWareLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/wareHouseFromSection"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/inputQuantityLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="@string/warehouse_from" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/wareFromSpinner"
                android:layout_height="50dp"
                android:textAlignment="textEnd"
                android:layout_width="match_parent"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_width="match_parent"
            android:id="@+id/wareHouseToSection"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/wareHouseFromSection">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="@string/warehouse_to" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/wareToSpinner"
                android:textAlignment="textEnd"
                android:layout_height="50dp"
                android:layout_width="match_parent"
                android:spinnerMode="dropdown" />
        </LinearLayout>


        <Button
            android:id="@+id/addOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_normal"
            android:backgroundTint="@color/red"
            android:padding="@dimen/spacing_tiny_half_plus"
            android:text="@string/add_order"
            app:layout_constraintTop_toBottomOf="@id/wareHouseToSection" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
