<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.UserFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/spacing_larger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_user"
            android:id="@+id/title"
            android:textStyle="bold"
            android:textSize="@dimen/font_larger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingTop="@dimen/spacing_normal_half" />


        <LinearLayout
            android:id="@+id/section1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="@dimen/font_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emailTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/spacing_normal"
                android:text="adres@mail.com"
                android:textSize="@dimen/font_large" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/section2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/section1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="@dimen/font_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/spacing_normal"
                android:text="Zbigniew Stonoga"
                android:textSize="@dimen/font_large" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/section3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/section2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="@dimen/font_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addressTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/spacing_normal"
                android:text="Sumlińska 54, Rachoniowo"
                android:textSize="@dimen/font_large" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/section4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/section3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="@dimen/font_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phoneTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/spacing_normal"
                android:text="123654789"
                android:textSize="@dimen/font_large" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>